Fix more spacing issues

--- a/web-2/css/main.css
+++ b/web-2/css/main.css
@@ -110,7 +110,11 @@
 }
 
 .loader img {
-    vertical-align: middle;
+    top: 50%;
+    left: 50%;
+    position: fixed;
+    margin-left: -64px;
+    margin-top: -64px;
 }
 
 .table thead tr td:first-child{
